CV Updating Website link

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <i class="social-icon fas fa-envelope"></i> -->
       <a class="footer-link" href="https://www.linkedin.com/in/michel-navarro-04419521/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://yoryis.github.io/cv/">Website</a>
       <hr />
       <p class="copyright">© Copyright 2020 YorYisN App</p>
     </div>
