Correcting menu and section

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <a class="nav-link" href="#testimonials">Experiences</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Skills</a>
+              <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cta">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -174,7 +174,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing" class="white-section">
+  <section id="skills" class="white-section">
     <h2 class="pricing-heading-h2">Empower Your Busines With FSM and MDM</h2>
     <h3 class="small-heading" style="color: #333E50">Technogies Skills</h3>
     <!-- card-deck will display them side by side -->
@@ -236,7 +236,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta" class="colored-section">
+  <section id="contact" class="colored-section">
     <div class="container-fluid">
       <h3 class="big-heading">Feel Free To Download My CV.</h3>
       <a href="images/CV_Navarro_Michel_BusinessConsultant_V13.pdf" download="CV_Navarro_Michel_BusinessConsultant_V13">
