--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="https://yoryis.github.io/cv/">
           <img class="navbar-image" src="images/YorYisN_LogoSmall.png" alt="YorYisN App">
           YorYisN App
         </a>
