--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="collapase navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#testimonials">Experiences</a>
+              <a class="nav-link" href="#experiences">Experiences</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#skills">Skills</a>
@@ -110,7 +110,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials" class="colored-section">
+  <section id="experiences" class="colored-section">
     <div id="carouselTestimonialsControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
